Make footer text more visible, and correct footer alignment.

--- a/mysite/static/css/base/base.css
+++ b/mysite/static/css/base/base.css
@@ -201,16 +201,19 @@ ul#links {
 }
 
 #footer-wrapper {
-    position: absolute;
     width: 100%;
     clear: both;
     left: 0;
+    /*background-color: #555;*/
+    position: absolute;
 }
 #footer {
-    width: 960px;
+    width: 950px;
     padding: 15px 5px;
     margin: 0 auto;
     text-align: right;
+    position: relative;
+    left: -10px;
 }
 #footer ul {
     display: inline;
@@ -226,11 +229,11 @@ ul#links {
 }
 
 #footer a {
-    color: #aaa;
+    color: #555;
 }
 
 #footer a:hover {
-    color: #ccc;
+    color: #1e1e1e;
 }
 
 #widgets {
